fix alignment on Feed

--- a/src/components/WatchlistOverview/WatchlistAnomalies/WatchlistAnomalies.module.scss
+++ b/src/components/WatchlistOverview/WatchlistAnomalies/WatchlistAnomalies.module.scss
@@ -82,7 +82,7 @@
 .tooltip {
   max-width: 530px;
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 .question {
